Added container items
Item knife functional and ItemGlass Bottles added

--- a/src/main/resources/assets/zanextras/lang/en_us.lang
+++ b/src/main/resources/assets/zanextras/lang/en_us.lang
@@ -228,6 +228,7 @@ item.zanextras_angelsword.name=Angel Sword
 item.zanextras_urielsword.name=Uriel's Sword
 item.zanextras_empowered_staria.name=Empowered Staria
 item.zanextras_empowered_zanium.name=Empowered Zanium
+item.zanextras_emeralddust.name=Emerald Dust
 
 entity.zanextras_hellsheep.name=Hell Sheep
 entity.zanextras_skeletonking.name=Skeleton King
