Log is now turnable

--- a/src/main/resources/assets/zanextras/lang/en_us.lang
+++ b/src/main/resources/assets/zanextras/lang/en_us.lang
@@ -52,7 +52,7 @@ tile.zanextras_lightredstoneore.name=Light Redstone Ore
 tile.zanextras_lightlapisore.name=Light Lapis Ore
 tile.zanextras_lightgrass.name=Light Grass
 tile.zanextras_lightplanks.name=Light Plank
-tile.zanextras_light_log.name=Light Log
+tile.zanextras_lightlog.name=Light Log
 tile.zanextras_lightleaves.name=Light Leaves
 tile.zanextras_lightsapling.name=Light Sapling
 tile.zanextras_lightsapling.name=Light Sapling
