--- a/src/main/resources/assets/zanextras/lang/en_us.lang
+++ b/src/main/resources/assets/zanextras/lang/en_us.lang
@@ -11,24 +11,22 @@ death.attack.light=%1$s was purified by the Light in the Promised Land. Try eati
 tile.zanextras_butterblock.name=Damn Hard Butter Block
 tile.zanextras_butterore.name=Damn Hard Butter Ore
 tile.zanextras_redglowstone.name=Red Glowstone
-tile.zanextras_lettuce.name=Block of Lettuce
-tile.zanextras_lettucestem.name=Lettuce Stem
-tile.zanextras_pepper.name=Pepper Crop
-tile.zanextras_ghost.name=Ghost Pepper Crop
-tile.zanextras_sweet_potatoes.name=Sweet Potato Crop
-tile.zanextras_spinach.name=Spinach Crop
-tile.zanextras_greenbean.name=Green Bean Crop
+tile.zanextras_lettucecrop.name=Lettuce Crop
+tile.zanextras_peppercrop.name=Pepper Crop
+tile.zanextras_ghostcrop.name=Ghost Pepper Crop
+tile.zanextras_sweetpotatocrop.name=Sweet Potato Crop
+tile.zanextras_spinachcrop.name=Spinach Crop
+tile.zanextras_greenbeancrop.name=Green Bean Crop
 tile.zanextras_stariablock.name=Staria Block
 tile.zanextras_stariaore.name=Staria Ore
 tile.zanextras_redglowtorch.name=Red Glow Torch
 tile.zanextras_zaniumblock.name=Zanium Block
 tile.zanextras_zaniumore.name=Zanium Ore
 tile.zanextras_cheesewheel.name=Cheese Wheel
-tile.zanextras_tomatostem.name=Tomato Stem
-tile.zanextras_tomato.name=Tomato Block
-tile.zanextras_peppercorn.name=Peppercorn Crop
-tile.zanextras_onion.name=Onion Crop
-tile.zanextras_garlic.name=Garlic Crop
+tile.zanextras_tomatocrop.name=Tomato Crop
+tile.zanextras_peppercorncrop.name=Peppercorn Crop
+tile.zanextras_onioncrop.name=Onion Crop
+tile.zanextras_garliccrop.name=Garlic Crop
 tile.zanextras_acidfluid.name=Acid
 tile.zanextras_chlorinefluid.name=Chlorine
 tile.zanextras_sodiumore.name=Sodium Block
